# python_100_days

./: .gitignore  README.md  alphavantage_cache.sqlite  cafe-data.csv  newsapi_cache.sqlite  pyproject.toml  token.txt
instance/: books.db  movies.db
python_100_days/015_058_intermediate/day_018_gui/: hirst.py  random_walk.py  shapes.py  spirograph.py
python_100_days/015_058_intermediate/day_019_instances/: etch_a_sketch.py  turtle_race.py
python_100_days/015_058_intermediate/day_020_021_snake/: food.py  main.py  scoreboard.py  snake.py
python_100_days/015_058_intermediate/day_022_pong/: ball.py  main.py  paddle.py  scoreboard.py
python_100_days/015_058_intermediate/day_023_crossing/: car_manager.py  main.py  player.py  scoreboard.py
python_100_days/015_058_intermediate/day_024_paths/: main.py
python_100_days/015_058_intermediate/day_025_data/: main.py  states.csv  states_to_learn.csv
python_100_days/015_058_intermediate/day_026_list_comprehension/: main.py  study.py
python_100_days/015_058_intermediate/day_027_tkinter/: main.py  playground.py  study.py
python_100_days/015_058_intermediate/day_028_pomodoro_app/: main.py
python_100_days/015_058_intermediate/day_029_password_manager/: data.json  data.txt  main.py
python_100_days/015_058_intermediate/day_030_erro_exceptions/: a_file.txt  main.py
python_100_days/015_058_intermediate/day_031_flash_card/: main.py
python_100_days/015_058_intermediate/day_032_smtp/: birthdays.csv  main.py  study.py
python_100_days/015_058_intermediate/day_033_api/: quotes.py  study.py
python_100_days/day_036_news_alert/: main.py
(+97 files in other folders)
