[tool.poetry]
name = "python-100-days"
version = "0.1.0"
description = ""
authors = ["kdanielw <kdanielalvesw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorgram-py = "^1.2.0"
pandas = "^2.2.3"
pyperclip = "^1.9.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
